# calculator

./: CMakeLists.txt  parser.cpp  scanner.cpp  scanner.h  symtab.cpp  symtab.h
Calculator with scanner and parser/: calc.cpp  makefile  parser.cpp  scanner.cpp  scanner.h  symtab.cpp  symtab.h  test1.cal  test10.cal  test2.cal  test3.cal  test4.cal  test5.cal  test6.cal  test7.cal  test8.cal  test9.cal
